# VibeDynaLITE

./: .gitignore  KevlarGrid Explicit Solver PRD.md  LICENSE  Makefile  README.md  gemini.md  pyproject.toml  walkthrough.md
.github/workflows/: ci.yml
VibeDynaLITEWiki/: Benchmark 1 - CFL Stability.md  Benchmark 10 - Oblique Impact Tumbling Dynamics.md  Benchmark 11 - Mesh Refinement V50 Convergence.md  Benchmark 2 - 1D Stress Wave.md  Benchmark 3 - Smith Yarn Impact.md  Benchmark 4 - Prestrained String Deflection.md  Benchmark 5 - Damping Decay Rate.md  Benchmark 6 - Progressive Failure.md  Benchmark 7 - Thermodynamic Monotonicity.md  Benchmark 8 - Ballistic Limit V50.md  Benchmark 9 - Free-Flying Projectile Energy Conservation.md  CFL Stability Condition.md  Changelog.md  Damping Models.md  Energy Conservation.md  Grid Sizing and Mesh Resolution.md  Home.md  Infinite Boundary Conditions.md  Kevlar Material Properties.md  Mass Scaling.md  Physics-Based Benchmarks.md  Spring Failure Mechanics.md
VibeDynaLITEWiki/.obsidian/: workspace.json
benchmarks/: bench_ballistic_limit.py  bench_solver.py
benchmarks/benchmark_8/: run_benchmark_8.py  validation_report.html
configs/: saved_configuration.json
configs/examples/: custom_material.json  custom_material.toml  kevlar29_sizing.json  kevlar29_sizing.toml  kevlar49_checkout.json  kevlar49_checkout.toml
docs/: PRD.md  gemini_deep_think_mesh_convergence_guidance.md  material_properties.md  mesh_refinement_study.md  sprint0_tasks.md  sprint1_tasks.md  sprint2_tasks.md  sprint3_tasks.md
exports/: executive_report.html
scripts/: detect_backend.py
src/kevlargrid/: __init__.py  __main__.py
src/kevlargrid/gui/: __init__.py  app.py  config_panel.py  controls.py  dashboard.py  plots.py  viewport3d.py
src/kevlargrid/io/: __init__.py  config.py  csv_export.py  report.py  results.py
src/kevlargrid/io/export/: __init__.py  csv_writer.py  h5_writer.py  report_builder.py  video_exporter.py
src/kevlargrid/materials/: __init__.py  library.py
src/kevlargrid/solver/: __init__.py  backend.py  boundary.py  damping.py  energy.py  failure.py  forces.py  fused.py  grid.py  integrator.py  projectile.py  taichi_solver.py  timestep.py  worker.py
src/kevlargrid/utils/: __init__.py  logging.py  units.py
templates/: report.html.j2
tests/gui/: __init__.py  test_config_roundtrip.py
tests/integration/: __init__.py  test_multiply.py  test_physics_6dof.py  test_physics_benchmarks.py  test_point_impact.py  test_profile.py  test_run_bench8.py  test_run_calib.py  test_run_numba.py  test_verification_challenge.py  test_verify_files.py  test_wave_propagation.py
tests/io/: test_export.py
tests/regression/: __init__.py
tests/solver/: test_jax_jit_cfl.py  test_jit_compat.py  test_parity.py  test_taichi_parity.py
tests/unit/: test_6dof_sdf.py  test_backend.py  test_boundary.py  test_damping.py  test_energy.py  test_failure.py  test_forces.py  test_grid.py  test_integrator.py  test_logging.py  test_projectile.py  test_sprint2.py  test_temp.py  test_timestep.py
