[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kevlargrid"
version = "0.1.0"
description = "2D/3D explicit mass-spring simulation tool for analyzing high-energy projectile impact against woven Kevlar barriers."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "bennames" },
]
keywords = ["kevlar", "ballistic", "simulation", "explicit-solver", "mass-spring"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "h5py>=3.9",
    "jinja2>=3.1",
]

[project.optional-dependencies]
gui = [
    "dearpygui>=1.10",
]
compute = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "numba>=0.59",
    "taichi>=1.7.0",
]
viz = [
    "pyvista>=0.43",
    "matplotlib>=3.8",
]
export = [
    "weasyprint>=60",
]
dev = [
    "pytest>=7.4",
    "pytest-benchmark>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "numpy>=1.24",
]
all = [
    "kevlargrid[gui,compute,viz,export,dev]",
]

[project.scripts]
kevlargrid = "kevlargrid.gui.app:launch"

[tool.hatch.build.targets.wheel]
packages = ["src/kevlargrid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU hardware",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary operator
    "RUF002", # ambiguous unicode characters (like en-dash and greek alpha in math equations)
    "N806",   # Variable in function should be lowercase (allow uppercase physics vars like L0, C_i)
    "SIM102", # Use a single if statement instead of nested if statements (nested ifs are fine)
    "SIM117", # Use a single with statement with multiple contexts (DearPyGui requires nested withs)
    "RUF001", # String contains ambiguous greek/math characters (allow alpha/beta symbols)
    "RUF100", # Unused noqa directive (ignore when noqa rules are globally disabled)
]
per-file-ignores = { "tests/**/*.py" = ["RUF059", "B007", "F841"] }

[tool.ruff.lint.isort]
known-first-party = ["kevlargrid"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["kevlargrid"]
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "kevlargrid.io.export.video_exporter",
    "kevlargrid.gui.viewport3d",
]
ignore_errors = true
